...
              SingleChildScrollView(
                scrollDirection: Axis.horizontal,
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    GestureDetector(
                      key: Key("factory1"),
                      onTap: () {
                        setState(() {
                          f1 = Colors.blue;
                          f2 = Colors.grey;
                          f3 = Colors.grey;
                          Navigator.push(
...
                            ),
                          ],
                        ),
                      ),
                    ),
                    GestureDetector(
                      key: Key("factory2"),
                      onTap: () {
                        setState(() {
                          f1 = Colors.grey;
                          f2 = Colors.blue;
                          f3 = Colors.grey;
                        });
...
