...
                                setState(() {
                                  isChecked = newChecked;
                                });
                              },
                            ),
                            ElevatedButton(
                              key: Key("activate"),
                              onPressed: () {
                                setState(() {
                                  Navigator.pushNamed(context, '/account2');
                                });
                              },
                              child: Text(
...
