...
                                      ],
                                    ),
                                  ),
                                ],
                              ),
                              ElevatedButton(
                                key: Key("otpButton"),
                                onPressed: () {
                                  Navigator.pushNamed(context, '/dashboard');
                                },
                                child: Text(
                                  'Activate',
                                  style: TextStyle(
...
